<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterAcitivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_register"
            android:layout_width="308dp"
            android:layout_height="258dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/register_image"
            app:layout_constraintBottom_toTopOf="@+id/textViewTitleRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/edtName"
            android:alpha="0"
            tools:alpha = "100"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/textInputEmailRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.storyapp__subs1.ui.custom.email.CustomEmailTextInputLayout
            android:id="@+id/textInputEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:alpha="0"
            tools:alpha = "100"
            app:layout_constraintBottom_toTopOf="@+id/textInputPasswordRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.example.storyapp__subs1.ui.custom.email.CustomEmailTextInputEdit
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.example.storyapp__subs1.ui.custom.email.CustomEmailTextInputLayout>

        <com.example.storyapp__subs1.ui.custom.Password.CustomPasswordTextInputLayout
            android:id="@+id/textInputPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:alpha="0"
            tools:alpha = "100"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <com.example.storyapp__subs1.ui.custom.Password.CustomPasswordTextInputEdit
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.example.storyapp__subs1.ui.custom.Password.CustomPasswordTextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/btnRegister"
            android:alpha="0"
            tools:alpha = "100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/register_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_register_name"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout_register_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>